fix max screen size on mobile

--- a/app/Home.css
+++ b/app/Home.css
@@ -1,8 +1,8 @@
 .screen {
     height: 100vh;
     width: 100vw;
-    max-height: 100%;
-    max-width: 100%;
+    max-height: 100vh;
+    max-width: 100vw;
     display: flex;
     flex-direction: column;
 }
